; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_synctime.c_SyncTime_CURL_WriteOutput.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_synctime.c_SyncTime_CURL_WriteOutput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @SyncTime_CURL_WriteOutput(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @fwrite(i8* %9, i64 %10, i64 %11, i8* %12)
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* %6, align 8
  %16 = mul i64 %14, %15
  ret i64 %16
}

declare dso_local i32 @fwrite(i8*, i64, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
